--- a/P007856.opf/meta.yml
+++ b/P007856.opf/meta.yml
@@ -1,60 +1,70 @@
-id: opecha:P007856
+id: P007856
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN5823
   title: རྒྱལ་པོ་མདོ་བཅུའི་རྩ་འགྲེལ་ཕྱོགས་བསྒྲིགས།
-  volume:
+  author: ''
+  volumes:
     d10568dbb41840388cfe19affb5df95d:
       image_group_id: I3CN5825
       title: Volume 1 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 1
       total_pages: 534
+      base_file: v001.txt
     839cd56a45cd48f4822507961ad18ba9:
       image_group_id: I3CN5826
       title: Volume 2 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 2
       total_pages: 350
+      base_file: v002.txt
     2f314518c7204b15b73e93fd3ffe36c6:
       image_group_id: I3CN5827
       title: Volume 3 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 3
       total_pages: 289
+      base_file: v003.txt
     dbe37212af3f4e58b0617e63e451a4b1:
       image_group_id: I3CN5828
       title: Volume 4 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 4
       total_pages: 335
+      base_file: v004.txt
     e88cccf98c04440f8e81f41626bb39d9:
       image_group_id: I3CN5829
       title: Volume 5 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 5
       total_pages: 511
+      base_file: v005.txt
     94fdb526c09f4f3689fded580e3c35f8:
       image_group_id: I3CN5830
       title: Volume 6 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 6
       total_pages: 251
+      base_file: v006.txt
     8bf848e1dbe24091882ae394ca3c23e2:
       image_group_id: I3CN5831
       title: Volume 7 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 7
       total_pages: 302
+      base_file: v007.txt
     f8563a5c2ba54c6884413a29029f03e4:
       image_group_id: I3CN5832
       title: Volume 8 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 8
       total_pages: 336
+      base_file: v008.txt
     8a724764e28341249133ee974096fb8f:
       image_group_id: I3CN5833
       title: Volume 9 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 9
       total_pages: 392
+      base_file: v009.txt
     00609e4197a04190879ab6c4d6b8b938:
       image_group_id: I3CN5834
       title: Volume 10 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
       volume_number: 10
       total_pages: 374
-  author: ''
+      base_file: v010.txt
 ebook_metadata:
   title: རྒྱལ་པོ་མདོ་བཅུའི་རྩ་འགྲེལ་ཕྱོགས་བསྒྲིགས།
   author: ''
