volumes of meta updated

--- a/P007856.opf/meta.yml
+++ b/P007856.opf/meta.yml
@@ -5,66 +5,56 @@ source_metadata:
   title: རྒྱལ་པོ་མདོ་བཅུའི་རྩ་འགྲེལ་ཕྱོགས་བསྒྲིགས།
   author: ''
   volumes:
-    d10568dbb41840388cfe19affb5df95d:
+    de8d455b8a6941e79c8a80485582daee:
       image_group_id: I3CN5825
-      title: Volume 1 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 1
       total_pages: 534
-      base_file: v001.txt
-    839cd56a45cd48f4822507961ad18ba9:
+    0b1e7a33d5604617b81f46e57300d743:
       image_group_id: I3CN5826
-      title: Volume 2 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 2
       total_pages: 350
-      base_file: v002.txt
-    2f314518c7204b15b73e93fd3ffe36c6:
+    583ae1ca3ca242b2856bc80e2044988f:
       image_group_id: I3CN5827
-      title: Volume 3 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 3
       total_pages: 289
-      base_file: v003.txt
-    dbe37212af3f4e58b0617e63e451a4b1:
+    a6fec30b072d4380b3df74ec17c15653:
       image_group_id: I3CN5828
-      title: Volume 4 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 4
       total_pages: 335
-      base_file: v004.txt
-    e88cccf98c04440f8e81f41626bb39d9:
+    4ecc8a169f3d40938f38ad156502dac1:
       image_group_id: I3CN5829
-      title: Volume 5 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 5
       total_pages: 511
-      base_file: v005.txt
-    94fdb526c09f4f3689fded580e3c35f8:
+    cf615bdf57434f889cb59c0fb9373ae5:
       image_group_id: I3CN5830
-      title: Volume 6 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 6
       total_pages: 251
-      base_file: v006.txt
-    8bf848e1dbe24091882ae394ca3c23e2:
+    53992caff423403e9efbd64c1ba2f851:
       image_group_id: I3CN5831
-      title: Volume 7 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 7
       total_pages: 302
-      base_file: v007.txt
-    f8563a5c2ba54c6884413a29029f03e4:
+    996bbde6978941afa8b7427945f6f2ba:
       image_group_id: I3CN5832
-      title: Volume 8 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 8
       total_pages: 336
-      base_file: v008.txt
-    8a724764e28341249133ee974096fb8f:
+    5d3170093bbe458599a6687607072a28:
       image_group_id: I3CN5833
-      title: Volume 9 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 9
       total_pages: 392
-      base_file: v009.txt
-    00609e4197a04190879ab6c4d6b8b938:
+    901435d3cb5d45c9a913d5d261cb7ec2:
       image_group_id: I3CN5834
-      title: Volume 10 of rgyal po mdo bcu'i rtsa 'grel phyogs bsgrigs/
+      title: ''
       volume_number: 10
       total_pages: 374
-      base_file: v010.txt
 ebook_metadata:
   title: རྒྱལ་པོ་མདོ་བཅུའི་རྩ་འགྲེལ་ཕྱོགས་བསྒྲིགས།
   author: ''
