--- a/P007856.opf/layers/v002/Pagination.yml
+++ b/P007856.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 72d04454aa8742c28bbe21adebf16f7b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2c1671823a834730b6fc720e95b6b14c:
