--- a/P007856.opf/layers/v003/Pagination.yml
+++ b/P007856.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1f410da044a3495e9f2240bd525b5aa4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df98966715c744c88c6c2c179bedd1a4:
