--- a/P007856.opf/layers/v004/Pagination.yml
+++ b/P007856.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: c43ba502d57d467bbac87f597680dc93
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   02a944e7ec8a483c82a4fa5c98fba5be:
