--- a/P007856.opf/layers/v005/Pagination.yml
+++ b/P007856.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9f5369dda8c34e9e94df303b4c9bf0bc
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f8bbeca498274cc182ab376a7dc156ed:
