--- a/P007856.opf/layers/v006/Pagination.yml
+++ b/P007856.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: fae82287430f4f1eb1571c4752b0aea1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   96327808ffda4ec8a1bffc1522828619:
