--- a/P007856.opf/layers/v007/Pagination.yml
+++ b/P007856.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4ed7eddbda40447b9153f3e5f3011136
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2aa3474345d24ed8a250e2fc7cadccdf:
