--- a/P007856.opf/layers/v008/Pagination.yml
+++ b/P007856.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5105f13e4ddc4ba395a76bc2ca4f88c4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d87c3cd4147d437d85646f39ca5e9c73:
