--- a/P007856.opf/layers/v009/Pagination.yml
+++ b/P007856.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: db45c3d968724c2099f571e7a7843ad1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   49a6bcfc30f645ada015b27508e96def:
