--- a/P007856.opf/layers/v010/Pagination.yml
+++ b/P007856.opf/layers/v010/Pagination.yml
@@ -1,5 +1,5 @@
 id: c3b5076e164e4e4ba829155520611a00
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df40605393fa4589807a9e866bf538c5:
