--- a/P007856.opf/layers/v001/Pagination.yml
+++ b/P007856.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 0268313a5ef34facac3dc1aaca331756
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d4a4331100cc4c369a00a9962be19330:
