--- a/P007856.opf/meta.yml
+++ b/P007856.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007856
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:45:17.806359
 source_metadata:
   id: bdr:W3CN5823
   title: རྒྱལ་པོ་མདོ་བཅུའི་རྩ་འགྲེལ་ཕྱོགས་བསྒྲིགས།
@@ -67,3 +67,5 @@ source_metadata:
       volume_number: 10
       total_pages: 374
       base_file: v010.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
